--- a/tui/Cargo.toml
+++ b/tui/Cargo.toml
@@ -34,6 +34,8 @@ required-features = ["cli"]
 
 [dev-dependencies]
 insta = { version = "1", features = ["glob"] }
+once_cell = "1"
+regex = "1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 gluesql = { workspace = true, features = ["gluesql-csv-storage"] }
